# python-recipe-demo

./: .gitignore  README.md  pyproject.toml
.github/workflows/: moderne-latest-integration.yml  moderne.yml
.moderne/: moderne.yml
demo/: __init__.py  api_client.py  calculator.py  data_processor.py  utils.py
